force-app/main/default/objects/Location_Steer__c/Location_Steer__c.object-meta.xml
<CustomObject>
    <label>Location Steer</label>
    <nameField>
        <displayFormat>LS-{0000}</displayFormat>
        <label>Location Steer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Steer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>