force-app/main/default/objects/Location_Steer__c/fields/CoSteer_Formula__c.field-meta.xml
<CustomField>
    <fullName>CoSteer_Formula__c</fullName>
    <formula>SUBSTITUTE(SUBSTITUTE(SUBSTITUTE( productPlantScenarioKey__c ,&apos;-Import&apos;,&apos;&apos;),&apos;-Export&apos;,&apos;&apos;),&apos;-Balanced&apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CoSteer Formula</label>
    <type>Text</type>
</CustomField>