force-app/main/default/objects/Location_Steer__c/fields/Depot_Steer_Override_mt__c.field-meta.xml
<CustomField>
    <fullName>Depot_Steer_Override_mt__c</fullName>
    <label>Depot Steer Override(€/mt)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>