force-app/main/default/objects/Location_Steer__c/fields/Depot_Steer_Override_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Depot_Steer_Override_Start_Date__c</fullName>
    <label>Depot Steer Override Start Date</label>
    <type>Date</type>
</CustomField>