force-app/main/default/objects/Location_Steer__c/fields/Location_Abbreviated_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Abbreviated_Name__c</fullName>
    <formula>Plant__r.Abbreviated_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Abbreviated Name</label>
    <type>Text</type>
</CustomField>