force-app/main/default/objects/Location_Steer__c/fields/Manual_Adjustment_Override__c.field-meta.xml
<CustomField>
    <fullName>Manual_Adjustment_Override__c</fullName>
    <label>Manual Adjustment Override (€/mt)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>