force-app/main/default/objects/Location_Steer__c/fields/Manual_Adjustment_Override_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Manual_Adjustment_Override_Start_Date__c</fullName>
    <label>Manual Adjustment Override Start Date</label>
    <type>Date</type>
</CustomField>