force-app/main/default/objects/Location_Steer__c/fields/MOT_Availability__c.field-meta.xml
<CustomField>
    <fullName>MOT_Availability__c</fullName>
    <formula>IF( INCLUDES(Plant__r.Depot_MOT__c, &quot;Truck&quot;), &quot;Truck;&quot;,&quot;&quot;)
&amp;
IF( INCLUDES(Plant__r.Depot_MOT__c, &quot;Rail&quot;), &quot;Rail;&quot;,&quot;&quot;)
&amp;
IF( INCLUDES(Plant__r.Depot_MOT__c, &quot;ITT&quot;), &quot;ITT;&quot;,&quot;&quot;) 
&amp;
IF( INCLUDES(Plant__r.Depot_MOT__c, &quot;Barge&quot;), &quot;Barge;&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MOT Availability</label>
    <type>Text</type>
</CustomField>