force-app/main/default/objects/Location_Steer__c/fields/Override_Scenario__c.field-meta.xml
<CustomField>
    <fullName>Override_Scenario__c</fullName>
    <label>Override Scenario</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Import</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Balanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>