force-app/main/default/objects/Location_Steer__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plant</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Location Steer</relationshipLabel>
    <relationshipName>Location_Steer</relationshipName>
    <type>Lookup</type>
</CustomField>