force-app/main/default/objects/Location_Steer__c/fields/PlantGradeUnq__c.field-meta.xml
<CustomField>
    <fullName>PlantGradeUnq__c</fullName>
    <formula>IF(RecordType.Name = &apos;Depot Steer&apos; , Plant_Code__c+TEXT(Product_Sub_Group__c)+ TEXT(MOT__c), Plant_Code__c+TEXT(Product_Sub_Group__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PlantGradeUnq</label>
    <type>Text</type>
</CustomField>