force-app/main/default/objects/Location_Steer__c/fields/Product_Sub_Group__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Group__c</fullName>
    <label>Product Sub Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGO B7</fullName>
            </value>
            <value>
                <fullName>IGO 50ppm</fullName>
            </value>
            <value>
                <fullName>ULG95 E5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>