force-app/main/default/objects/Location_Steer__c/fields/Product_Sub_Group_Availability__c.field-meta.xml
<CustomField>
    <fullName>Product_Sub_Group_Availability__c</fullName>
    <formula>IF( INCLUDES(Plant__r.Products_Availability__c, &quot;AGO B7&quot;), &quot;AGO B7;&quot;,&quot;&quot;)
&amp;
IF( INCLUDES(Plant__r.Products_Availability__c , &quot;IGO 50ppm&quot;), &quot;IGO 50ppm;&quot;,&quot;&quot;)
&amp;
IF( INCLUDES(Plant__r.Products_Availability__c, &quot;ULG95 E5&quot;), &quot;ULG95 E5;&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Sub Group Availability</label>
    <type>Text</type>
</CustomField>