force-app/main/default/objects/Location_Steer__c/fields/productPlantScenarioKey__c.field-meta.xml
<CustomField>
    <fullName>productPlantScenarioKey__c</fullName>
    <formula>IF(ISPICKVAL( Product_Sub_Group__c,&apos;IGO 50ppm&apos;),&apos;IGO&apos;,
   IF(ISPICKVAL( Product_Sub_Group__c,&apos;AGO B7&apos;),&apos;AGO&apos;,
   IF(ISPICKVAL( Product_Sub_Group__c ,&apos;ULG95 E5&apos;),&apos;MOGAS&apos;,&apos;&apos;))) +&apos;-&apos; +   Plant__r.Abbreviated_Name__c + &apos;-&apos; +  TEXT(Scenario__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>productPlantScenarioKey</label>
    <type>Text</type>
</CustomField>