force-app/main/default/objects/Location_Steer__c/fields/Rv_Is_Active_Steer__c.field-meta.xml
<CustomField>
    <fullName>Rv_Is_Active_Steer__c</fullName>
    <description>Returns true if steer record is valid.</description>
    <formula>Valid_From__c &lt;= TODAY() &amp;&amp; Valid_To__c &gt;= TODAY()</formula>
    <label>Is Active Steer?</label>
    <type>Checkbox</type>
</CustomField>