force-app/main/default/objects/Location_Steer__c/fields/Rv_prompt_window_percent__c.field-meta.xml
<CustomField>
    <fullName>Rv_prompt_window_percent__c</fullName>
    <formula>IF((((Valid_To__c - TODAY()) &lt; 15) &amp;&amp; Valid_To__c &gt;= Today()), ((Valid_To__c - TODAY())/15), If((Valid_To__c &lt; Today()), 0, 1))</formula>
    <label>% of Steer in prompt window</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>