force-app/main/default/objects/Location_Steer__c/fields/Scenario_Availability__c.field-meta.xml
<CustomField>
    <fullName>Scenario_Availability__c</fullName>
    <formula>IF( INCLUDES(Plant__r.Scenario_Type__c , &quot;Import&quot;), &quot;Import;&quot;,&quot;&quot;)
&amp;
IF( INCLUDES(Plant__r.Scenario_Type__c , &quot;Export&quot;), &quot;Export;&quot;,&quot;&quot;)
&amp;
IF( INCLUDES(Plant__r.Scenario_Type__c, &quot;Balanced&quot;), &quot;Balanced;&quot;,&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scenario Availability</label>
    <type>Text</type>
</CustomField>