force-app/main/default/objects/Location_Steer__c/fields/Scenario_Value__c.field-meta.xml
<CustomField>
    <fullName>Scenario_Value__c</fullName>
    <label>Scenario Value(€/mt)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>