force-app/main/default/objects/Location_Steer__c/fields/Source_Location__c.field-meta.xml
<CustomField>
    <fullName>Source_Location__c</fullName>
    <formula>Plant__r.Source_Location__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Location</label>
    <type>Checkbox</type>
</CustomField>