force-app/main/default/objects/Location_Steer__c/fields/Source_Steer__c.field-meta.xml
<CustomField>
    <fullName>Source_Steer__c</fullName>
    <formula>Scenario_Value__c  +  Manual_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Steer(€/mt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>