force-app/main/default/objects/Location_Steer__c/fields/Steer_Value__c.field-meta.xml
<CustomField>
    <fullName>Steer_Value__c</fullName>
    <label>Steer Value(€/mt)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>