force-app/main/default/objects/Location_Steer__c/fields/Valid_To_Fomula__c.field-meta.xml
<CustomField>
    <fullName>Valid_To_Fomula__c</fullName>
    <formula>CASE(WEEKDAY( Valid_To__c ),
2, Valid_To__c - 5, 
3, Valid_To__c - 5, 
4, Valid_To__c - 5,
5, Valid_To__c - 3,
6, Valid_To__c - 3,
7, Valid_To__c - 3,
1, Valid_To__c - 4,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid To Fomula</label>
    <type>Date</type>
</CustomField>