force-app/main/default/objects/Location_Steer__c/recordTypes/Depot_Steer.recordType-meta.xml
<RecordType>
    <fullName>Depot_Steer</fullName>
    <active>true</active>
    <label>Depot Steer</label>
</RecordType>