force-app/main/default/objects/Location_Steer__c/recordTypes/Origination_Steer.recordType-meta.xml
<RecordType>
    <fullName>Origination_Steer</fullName>
    <active>true</active>
    <label>Origination Steer</label>
</RecordType>