force-app/main/default/objects/Location_Steer__c/recordTypes/Source_Steer.recordType-meta.xml
<RecordType>
    <fullName>Source_Steer</fullName>
    <active>true</active>
    <label>Source Steer</label>
</RecordType>