force-app/main/default/objects/Location_Steer__c/validationRules/NonDefault_Depot_Steer_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>NonDefault_Depot_Steer_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>IF(AND(RecordType.Name ==&apos;Depot Steer&apos;,Default__c ==False),OR(NOT(ISBLANK( Depot_Steer_Override_Start_Date__c)),NOT(ISBLANK( Depot_Steer_Override_mt__c))), false)</errorConditionFormula>
    <errorMessage>Overrides not allowed for Non-Default Depot Steers</errorMessage>
</ValidationRule>