force-app/main/default/objects/Location_Steer__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Default__c</columns>
    <columns>Plant__c</columns>
    <columns>Plant_Code__c</columns>
    <columns>Product_Sub_Group__c</columns>
    <columns>MOT__c</columns>
    <columns>Depot_Steer__c</columns>
    <columns>Valid_To__c</columns>
    <columns>Rv_Is_Active_Steer__c</columns>
    <columns>Depot_Steer_Override_Start_Date__c</columns>
    <columns>Depot_Steer_Override_mt__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Plant_Code__c</field>
        <operation>equals</operation>
        <value>D028</value>
    </filters>
    <label>Depot Steer</label>
</ListView>