force-app/main/default/objects/Location_Steer__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>CoSteer_Formula__c</columns>
    <columns>Plant_Name__c</columns>
    <columns>Source_Location__c</columns>
    <columns>Scenario_Value__c</columns>
    <columns>Valid_From__c</columns>
    <columns>Valid_To__c</columns>
    <columns>Default__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>