force-app/main/default/objects/Location_Steer__c/listViews/Inactive_Depot_Steers.listView-meta.xml
<ListView>
    <fullName>Inactive_Depot_Steers</fullName>
    <columns>NAME</columns>
    <columns>Default__c</columns>
    <columns>Plant__c</columns>
    <columns>Plant_Code__c</columns>
    <columns>Product_Sub_Group__c</columns>
    <columns>MOT__c</columns>
    <columns>Depot_Steer__c</columns>
    <columns>Valid_To__c</columns>
    <columns>Rv_Is_Active_Steer__c</columns>
    <columns>Depot_Steer_Override_Start_Date__c</columns>
    <columns>Depot_Steer_Override_mt__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Location_Steer__c.Depot_Steer</value>
    </filters>
    <filters>
        <field>Source_Location__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Rv_Is_Active_Steer__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive Depot Steers</label>
</ListView>