force-app/main/default/objects/Location_Steer__c/listViews/Inactive_Source_Steers.listView-meta.xml
<ListView>
    <fullName>Inactive_Source_Steers</fullName>
    <columns>NAME</columns>
    <columns>Plant__c</columns>
    <columns>Plant_Code__c</columns>
    <columns>Product_Sub_Group__c</columns>
    <columns>Default__c</columns>
    <columns>Scenario__c</columns>
    <columns>productPlantScenarioKey__c</columns>
    <columns>Scenario_Value__c</columns>
    <columns>Manual_Adjustment__c</columns>
    <columns>Source_Steer__c</columns>
    <columns>Valid_From__c</columns>
    <columns>Valid_To__c</columns>
    <columns>Rv_Is_Active_Steer__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Location_Steer__c.Source_Steer</value>
    </filters>
    <filters>
        <field>Rv_Is_Active_Steer__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Inactive Source Steers</label>
</ListView>