force-app/main/default/objects/Location_Steer__c/listViews/Source_Steer.listView-meta.xml
<ListView>
    <fullName>Source_Steer</fullName>
    <columns>NAME</columns>
    <columns>Plant__c</columns>
    <columns>Product_Sub_Group__c</columns>
    <columns>Default__c</columns>
    <columns>Scenario__c</columns>
    <columns>productPlantScenarioKey__c</columns>
    <columns>Scenario_Value__c</columns>
    <columns>Source_Location__c</columns>
    <columns>Manual_Adjustment__c</columns>
    <columns>Source_Steer__c</columns>
    <columns>PlantGradeUnq__c</columns>
    <columns>Valid_From__c</columns>
    <columns>Valid_To__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Location_Steer__c.Source_Steer</value>
    </filters>
    <label>Source Steer</label>
</ListView>